Unbind video texture from mailbox after copying to WebGL.

Every time a video is copied to WebGL a new mailbox was associated with
the texture. Since the texture is cached indefinitely the mapping
between textures and mailboxes was growing forever. We can use
glProduceTextureDirectCHROMIUM to unbind textures and mailboxes in this
case.

BUG=634012
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2207253002
Cr-Commit-Position: refs/heads/master@{#410204}

Former-commit-id: c5fb6dd04f15201c85d37695b647c0a08d8ee053